url: "http://localhost:8081"
---
- runFlow: subflows/web-select-existing-mock-profile.yml
- tapOn: "Journal"
- waitForAnimationToEnd
- tapOn: "The Infinite Library"
- waitForAnimationToEnd
- assertVisible: "The Infinite Library"
- scrollUntilVisible:
    element:
      id: "btn.dream.favorite"
    direction: DOWN
    visibilityPercentage: 40
    centerElement: true
- assertVisible: "(Favorite|Favori|Favorito|Favorited|Ajout. aux favoris|En favoritos)"
- runFlow:
    when:
      visible: "(Favorite|Favori|Favorito)"
    commands:
      - tapOn:
          id: "btn.dream.favorite"
      - waitForAnimationToEnd
      - assertVisible: "(Favorited|Ajout. aux favoris|En favoritos)"
- runFlow:
    when:
      visible: "(Favorited|Ajout. aux favoris|En favoritos)"
    commands:
      - tapOn:
          id: "btn.dream.favorite"
      - waitForAnimationToEnd
      - assertVisible: "(Favorite|Favori|Favorito)"
