url: "http://localhost:8081"
---
- runFlow: subflows/web-select-existing-mock-profile.yml
- tapOn: "Journal"
- waitForAnimationToEnd
- assertVisible: "(Dream Journey|Voyage onirique|Viaje on.rico)"
- tapOn:
    id: "btn.filterFavorites"
- waitForAnimationToEnd
- assertVisible:
    id: "btn.clearFilters"
- tapOn:
    id: "btn.clearFilters"
- waitForAnimationToEnd
