url: "http://localhost:8081"
---
- runFlow: subflows/web-select-existing-mock-profile.yml
- tapOn: "Journal"
- waitForAnimationToEnd
- assertVisible:
    id: "btn.filterMore"
- tapOn:
    id: "btn.filterMore"
- waitForAnimationToEnd
- assertVisible:
    id: "modal.advancedFilters"
- tapOn: "(Mystical|Mystique)"
- waitForAnimationToEnd
- tapOn: "(Done|Terminé|Listo|Fertig|Fatto|Concluir)"
- waitForAnimationToEnd
- assertVisible: "The Infinite Library"
- runFlow:
    when:
      visible:
        id: "btn.filterAll"
    commands:
      - tapOn:
          id: "btn.filterAll"
      - waitForAnimationToEnd
- runFlow:
    when:
      visible:
        id: "btn.clearFilters"
    commands:
      - tapOn:
          id: "btn.clearFilters"
      - waitForAnimationToEnd
